# crypto-trading-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  MANIFEST.in  README.md  UPDATE_LOG.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  README.md  backfill_performance_history.py  main.py  pyproject.toml  requirements.txt  setup.py  start.sh  test_performance_service.py
backend/migrations/: 001_add_binance_fields.sql  002_add_klines_table.sql  003_add_close_reason_to_closed_positions.sql  004_add_performance_indexes.sql  004_add_positions_unique_constraint.sql  005_add_entry_fee_to_positions.sql  005_fix_holding_duration.sql  006_add_snapshot_flags.sql  create_account_settings.sql
backend/scripts/: fix_closed_positions.py  reconcile_closed_positions.py
backend/src/api/: __init__.py  server.py
backend/src/api/routes/: __init__.py  account.py  decisions.py  history.py  market.py  performance.py  portfolio.py  settings.py
backend/src/core/: config.py  exceptions.py  logger.py  timezone_utils.py  trading_coordinator.py  trading_system_builder.py
backend/src/database/: dao.py  models.py  session.py
backend/src/decision/: __init__.py  layered_coordinator.py  prompt_templates.py  prompts.py  strategist.py  tools.py  trader.py
backend/src/execution/: __init__.py  order.py  portfolio.py  risk.py  trading_executor.py
backend/src/learning/: __init__.py  performance.py  reflection.py
backend/src/memory/: __init__.py  long_term.py  retrieval.py  short_term.py
backend/src/models/: __init__.py  decision.py  environment.py  event.py  market.py  memory.py  performance.py  portfolio.py  regime.py  trade.py
backend/src/perception/: __init__.py  crypto_overview.py  data_collector.py  environment_builder.py  http_utils.py  indicators.py  kline_cleaner.py  kline_manager.py  macro.py  market_analyzer.py  market_data.py  news.py  sentiment.py  stocks.py  symbol_mapper.py  validator.py
backend/src/services/: __init__.py  account_sync.py  performance_service.py
backend/src/services/database/: __init__.py  dao.py  models.py
backend/tests/: conftest.py  test_symbol_mapper.py
backend/tests/core/: test_config.py  test_logger.py
backend/tests/decision/: test_llm_client.py  test_strategist.py  test_tools.py  test_trader.py
backend/tests/execution/: test_order_executor.py  test_portfolio_manager.py  test_risk_manager.py
backend/tests/learning/: test_performance.py  test_reflection.py
backend/tests/memory/: test_long_term.py  test_retrieval.py  test_short_term.py
backend/tests/models/: test_market.py  test_portfolio.py  test_trade.py
backend/tests/perception/: test_indicators.py
docs/: BUGFIXES.md  (+31 more)
(+80 files in other folders)
